--- a/marketplace-client/package.json
+++ b/marketplace-client/package.json
@@ -14,9 +14,11 @@
     "@chakra-ui/react": "2.8.2",
     "@emotion/react": "11.13.3",
     "@emotion/styled": "11.13.0",
+    "@reduxjs/toolkit": "2.2.7",
     "framer-motion": "11.3.31",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "9.1.2",
     "react-router-dom": "6.26.1"
   },
   "devDependencies": {
