--- a/marketplaceAPI/marketplaceAPI/marketplaceAPI.csproj
+++ b/marketplaceAPI/marketplaceAPI/marketplaceAPI.csproj
@@ -14,4 +14,8 @@
     <Folder Include="Controllers\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\marketplaceAPI.DAL\marketplaceAPI.DAL.csproj" />
+  </ItemGroup>
+
 </Project>
