chore: Add base for UserServices and test UnitOfWork implementations

--- a/marketplaceAPI/marketplaceAPI/appsettings.json
+++ b/marketplaceAPI/marketplaceAPI/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "MainDB": "Data Source=LAPTOP-CIVG2022\\SQLEXPRESS; Initial Catalog=MarketplaceDb; Integrated Security=true; TrustServerCertificate=true;"
+  },
   "AllowedHosts": "*"
 }
