--- a/marketplaceAPI/marketplaceAPI.BLL/marketplaceAPI.BLL.csproj
+++ b/marketplaceAPI/marketplaceAPI.BLL/marketplaceAPI.BLL.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\marketplaceAPI.DAL\marketplaceAPI.DAL.csproj" />
+  </ItemGroup>
+
 </Project>
