--- a/marketplaceAPI/.gitignore
+++ b/marketplaceAPI/.gitignore
@@ -16,6 +16,8 @@
 # Mono auto generated files
 mono_crash.*
 
+/marketplaceAPI/marketplaceAPI/appsettings.json
+
 # Build results
 [Dd]ebug/
 [Dd]ebugPublic/
