--- a/marketplaceAPI/marketplaceAPI/appsettings.json
+++ b/marketplaceAPI/marketplaceAPI/appsettings.json
@@ -6,7 +6,13 @@
     }
   },
   "ConnectionStrings": {
-    "MainDB": "Data Source=LAPTOP-CIVG2022\\SQLEXPRESS; Initial Catalog=MarketplaceDb; Integrated Security=true; TrustServerCertificate=true;"
+    "MainDB": "Data Source=zzzzz; Initial Catalog=MarketplaceDb; Integrated Security=true; TrustServerCertificate=true;"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JWT": {
+    "SecretKey": "VoIYQGTCSbE4FLA3mZsfSD1wMCi9wA0Xs4s2HzGNbKuXry1tNN-2024",
+    "Issuer": "marketplaceAPI",
+    "Audience": "marketplaceClient",
+    "ExpirationTimeMinutes": 60
+  }
 }
